bad/assign_field_int_mcall_bool.example_compiler_output
ERROR
[1mbad/assign_field_int_mcall_bool.lat:10:20: [1;31merror: [0;1massigning to `int` from incompatible type `boolean`[m
	(new M).foo().fld = true;
	                  [1;32m^[m
